--- a/src/file-manager/css/index.scss
+++ b/src/file-manager/css/index.scss
@@ -1,5 +1,6 @@
 @import '_components/selectable-list.scss';
 @import '_components/files-list-item.scss';
+@import '_components/file-rename-form.scss';
 
 html {
     height: 100%;
@@ -11,4 +12,16 @@ body {
     };
     margin: 0;
     min-height: 100%;
+}
+
+.nav {
+    margin: {
+        bottom: -1.2em;
+        left: 1.2em;
+    };
+}
+
+.files {
+    
+    
 }
