--- a/src/file-manager/css/_vars.scss
+++ b/src/file-manager/css/_vars.scss
@@ -7,3 +7,7 @@ $color: (
     row-even: #EEE,
     row-odd: #FFF
 );
+
+$file-list-item-height: 2em;
+$buttons-space: .5em;
+$input-offset: 4px; // to make text indent equal for label end rename form
